src/sass/style.scss
@use 'colors' as *;
@use 'components' as *;
@use 'css_reset' as *;

html {
	font-size: 62.5%;
	scroll-padding-top: 88px;
	scroll-behavior: smooth;
}

.body {
	font-family: 'Montserrat', sans-serif;
	font-size: 1.6rem;
	background-color: $dark;

	&-lock {
		overflow: hidden;
	}
}

.wrapper {
	margin: 0 auto;
	width: 100%;
	max-width: 1200px;
}

.link-animation {
	position: relative;
	display: inline-block;
	margin: 0.2em;
	padding: 0.4em;
	font-size: 2rem;
	color: $dark;
	text-transform: uppercase;
	text-decoration: none;
	transition: color 0.3s;

	&::before,
	&::after {
		content: '';
		position: absolute;
		width: 0;
		bottom: 0;
		border-bottom: 2px solid $gold;
		transition: 0.3s;
	}

	&::before {
		right: 50%;
	}

	&::after {
		left: 50%;
	}

	&:hover::before,
	&:hover::after {
		width: 50%;
	}
}

// ---NAV---

.nav__items-desktop {
	display: none;
}

.wrapper-nav {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.nav {
	position: fixed;
	display: flex;
	justify-content: space-around;
	align-items: center;
	top: 0;
	padding: 0.8em 0;
	width: 100%;
	background-color: transparent;
	transition: background-color 0.6s;
	z-index: 100;

	&__logo {
		font-weight: bold;
		font-size: 2.4rem;
		margin-left: 0.5em;
		margin-right: auto;
		padding: 0.7em;
		text-transform: uppercase;
		text-decoration: none;
		color: $main;
		transition: color 0.3s;

		&:hover {
			color: $gold;
		}
	}

	&__logo span {
		color: $gold;
	}

	&__items {
		&-mobile {
			position: fixed;
			top: 0;
			right: 0;
			display: flex;
			justify-content: center;
			flex-direction: column;
			align-items: center;
			height: 100vh;
			width: 100%;
			transform: translateY(-300%);
			transition: transform 0.8s;
			background-color: $main;

			&--active {
				transform: translateY(0);
			}
		}
	}

	&__item {
		color: $main;

		&-mobile {
			margin: 1.3em;
		}
	}

	&__burger-btn {
		position: fixed;
		top: 17px;
		right: 17px;
		padding: 1em;
		background: none;
		border: 1px solid transparent;
		cursor: pointer;
		z-index: 1000;

		&:focus {
			outline: none;
			border: 1px solid rgba(255, 255, 255, 0.5);
			border-radius: 8px;
		}

		&:hover {
			.nav__burger-btn__bars::after,
			.nav__burger-btn__bars::before {
				width: 100%;
			}
		}

		&__box {
			position: relative;
			width: 40px;
			height: 30px;
		}

		&__bars,
		&__bars::after,
		&__bars::before {
			position: absolute;
			right: 0;
			height: 3px;
			content: '';
			background-color: $gold;
			border-radius: 2px;
			transition: width 0.3s;
		}

		&__bars {
			width: 100%;

			&::after {
				top: 13px;
				width: 60%;
			}

			&::before {
				top: 27px;
				width: 30%;
				transition-delay: 0.1s;
			}
		}
	}
}

.fa-circle-user {
	font-size: 2.3rem;
}

.header h1 span {
	color: $gold;
}

.header {
	position: relative;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	padding: 2em;
	height: 100vh;
	text-align: center;
	color: $main;
	background-image: $main-gradient, url('../img/bgc-small.jpg');
	background-size: cover;
	background-position: center;
	background-attachment: scroll;

	&__heading {
		font-size: 4.8rem;
		text-transform: uppercase;
	}

	&__text {
		font-size: 2rem;
		color: $gold;
		margin: 0.7em;
	}

	&__btn {
		margin-top: 2em;
		padding: 0.8em 1.6em;
		font-size: 1.4rem;
		background: $dark;
		border: none;
		border-radius: 8px;
		color: $main;
		text-decoration: none;
		text-transform: uppercase;
		cursor: pointer;

		&::before {
			background-color: $gold;
		}
	}
}

// ---O NAS---

.aboutus {
	&__boxes {
		display: grid;
		height: 1100px;
		grid-template-columns: 1fr;
		grid-template-rows: repeat(3 1fr);
		gap: 1em;
		padding: 2em 1em;
	}

	&__box {
		position: relative;
		display: flex;
		flex-direction: column;
		padding: 1.3em;
		border-radius: 18px;
		z-index: 5;

		&--first {
			background-image: $aboutus-gradient-one;
		}

		&--second {
			background-image: $aboutus-gradient-two;
		}

		&--third {
			background-image: $aboutus-gradient-three;
		}

		&-icon {
			position: absolute;
			opacity: 0.1;
			z-index: -5;

			&--first {
				bottom: 0.4em;
				right: 6.3em;
				width: 26%;
				animation: rotate-right 120s infinite linear;
				&-two {
					top: 6.2em;
					left: 12em;
					width: 18%;
					animation: rotate-left 200s infinite linear;
				}
			}

			&--second {
				bottom: 13%;
				right: 20%;
				width: 45%;
				animation: rotate-right 90s infinite linear;
			}

			&--third {
				bottom: 0.4em;
				right: 6.3em;
				width: 40%;
				animation: rotate-left 150s infinite linear;
			}
		}

		&-heading {
			position: relative;
			text-align: center;
			margin-bottom: 0.5em;
			font-size: 1.9rem;
			color: $main;
		}

		&-content {
			display: flex;
		}

		&-text {
			font-size: 1.5rem;
			padding: 0.2em;
			color: #fff;
			text-align: justify;
			text-indent: 10%;
		}

		&-link {
			position: absolute;
			bottom: 0;
			left: 1em;
			padding: 0.5em;
			margin: 0.5em;
			color: $gold;
			text-align: left;
			text-decoration: none;
			transition: color 0.3s;

			&:hover {
				color: $main;
			}
		}
	}
}
/* ... */

